# cppProject

./: CMakeLists.txt  README.md  docker-compose.yml  index.html  nginx.conf
.github/workflows/: cmake-test.yml
docker/: Dockerfile.builder  Dockerfile.nginx  Dockerfile.server
include/: MergeSort.h  ProcessNumbers.h  TbbSort.h
src/: CMakeLists.txt  MergeSort.cpp  MergeSort.cu  PreprocessingTest.cpp  ProcessNumbers.cpp  SortTest.cpp  TbbSort.cpp  backend.cpp
utils/: local_test.cpp  test_server_local.py
